--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4118,3 +4118,41 @@ message User {
   * 필드 이름(`"name"`, `"id"`, `"is_admin"`, `"roles"`)이 데이터 자체보다 더 많은 바이트를 차지
 - protobuf 데이터는 필드 이름 없이 값과 필드 번호만 포함하므로, **20\~30 바이트** 수준
 
+## 25.09.01
+
+[Tsinghua Professors Break 40-Year Bottleneck of Dijkstra's Algorithm, Overturn Textbook, Win Best Paper at STOC](https://eu.36kr.com/en/p/3419098143837833)
+
+- [(퍼온 글) 다이크스트라를 넘어서 70년의 컴퓨터 과학을 새롭게 쓴 새로운 알고리즘 - 👓 읽을 거리 - 닷넷데브](https://forum.dotnetdev.kr/t/topic/13650)
+
+- 다익스트라 알고리즘은 1956년 Edsger Dijkstra 가 찾아냄
+
+    Starting from the starting point and gradually exploring the shortest path to each point in the network - this method is effective because knowing the shortest path to nearby nodes can help you find the shortest path to farther nodes.
+
+    But the final result is a list of shortest paths sorted by distance. Therefore, the sorting bottleneck sets a fundamental limit on the speed of the algorithm.
+
+- 그치만 항상 정렬 비용이 병목이었음. 
+  - 계산 중간 과정마다 거리 정보의 배열에서 가장 짧은 거리를 찾아내야 했기 때문 
+
+
+    두안란(Duan Ran)이 더 유망한 방법을 발견한 것은 2021년에 들어서였다. 핵심은 알고리즘의 각 단계에서 다음 단계에 집중하는 것에 있다.
+    다익스트라(Dijkstra)의 알고리즘은 이전에 탐색된 영역을 기반으로 다음 단계를 결정하는데, 이때 이 영역의 "경계"—즉, 경계에 연결된 모든 노드—를 스캔한다. 초기에는 시간이 많이 걸리지 않지만, 알고리즘이 진행될수록 속도가 점점 느려진다.
+
+    두안란은 경계에 있는 인접 노드들을 여러 **클러스터(군집)**로 묶는 방식을 구상했다. 각 단계에서는 각 클러스터에서 단 하나의 노드만 고려한다. 이렇게 하면 스캔해야 할 노드 수가 줄어들어 각 단계의 탐색 속도가 빨라진다. 알고리즘이 항상 가장 가까운 노드를 선택하지는 않기 때문에 기존의 정렬 병목 현상은 더 이상 문제가 되지 않는다. 하지만 이 클러스터 기반 방식이 실제로 알고리즘을 빠르게 만드는지, 오히려 느리게 만들지는 않는지를 보장하는 것이 큰 도전이었다.
+
+    그 후 1년 동안 두안란은 이 기본 아이디어를 다듬었고, 2022년 가을에는 기술적 난관을 극복할 수 있을 것이라는 낙관적인 전망을 갖게 되었다.
+    그는 세 명의 대학원생을 모집해 세부 사항을 정교하게 다듬는 작업을 시작했다. 몇 달 후, 그들은 부분적인 성공을 거두었다.
+    임의의 가중치에 대해 정렬 병목을 돌파하는 알고리즘을 개발했지만, 이는 **무방향 그래프(undirected graph)**에만 적용 가능했다.
+
+
+| 항목               | 🧭 다익스트라 알고리즘                                 | 🚀 두안란의 클러스터 기반 알고리즘                                     |
+| ------             | ------------------------                               | ----------------------------------                                     |
+| 🔍 탐색 방식       | 경계에 있는 모든 노드를 스캔하여 가장 가까운 노드 선택 | 경계 노드를 여러 클러스터로 나누고, 각 클러스터에서 하나의 노드만 선택 |
+| ⏱️ 속도             | 초기에는 빠르지만, 경계 노드가 많아질수록 느려짐       | 매 단계에서 고려할 노드 수가 적어져 상대적으로 빠름                    |
+| 🧮 정렬 병목       | 우선순위 큐 또는 정렬 과정에서 병목 발생               | 가장 가까운 노드를 반드시 선택하지 않기 때문에 병목 회피 가능          |
+| 📐 적용 대상       | 방향 그래프 및 무방향 그래프 모두 가능                 | 현재는 무방향 그래프에만 적용 가능                                     |
+| ⚖️ 가중치 처리      | 임의의 가중치 처리 가능                                | 임의의 가중치 처리 가능 (부분 성공)                                    |
+| 🧠 알고리즘 정확성 | 항상 최단 경로 보장                                    | 일부 경우 최단 경로가 아닐 수 있음 (속도 우선)                         |
+
+- 다익스트라: **정확성 우선**, 느려질 수 있음  
+- 두안란 방식: **속도 우선**, 정확성은 일부 희생  
+- 두안란의 접근은 **대규모 그래프 탐색**에서 특히 유용할 수 있음
