--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4156,3 +4156,67 @@ message User {
 - 다익스트라: **정확성 우선**, 느려질 수 있음  
 - 두안란 방식: **속도 우선**, 정확성은 일부 희생  
 - 두안란의 접근은 **대규모 그래프 탐색**에서 특히 유용할 수 있음
+
+## 25.09.02
+
+[Crawling a billion web pages in just over 24 hours](https://andrewkchan.dev/posts/crawler.html)
+
+- [24시간 만에 10억 웹페이지를 크롤링한 2025년형 대규모 크롤러 구축기  GeekNews](https://news.hada.io/topic?id=22118&utm_source=weekly&utm_medium=email&utm_campaign=202530)
+
+- 10억 개의 웹페이지를 24시간 만에 크롤링한 실제 경험과 현대적인 웹 크롤링 시스템 설계 과정 공유
+  * 페이지에 작성자가 밝힌 비용은 : the 25.5 active hours cost about $462
+- 최신 하드웨어·클라우드 인프라로 비용 수백 달러 수준에서 대규모 크롤링 실현, 주요 병목이 파싱임을 확인
+- 자바스크립트를 실행하지 않고 HTML 파싱만 진행했지만, 여전히 상당수 웹페이지 접근 가능했음
+- Redis 기반 노드 클러스터 아키텍처 설계, 도메인별 샤딩 및 프로세스 구조 최적화로 효율 극대화
+- 네트워크보다 CPU·SSL·메모리가 주요 병목으로 드러났고, 대형 도메인 프론티어 관리가 핵심 이슈였음
+
+**crawling 에도 매너가 있다. by copilot**
+
+✅ 훌륭한 크롤링 매너
+
+- robots.txt 준수: 사이트가 허용한 범위 내에서만 접근.
+- 정직한 User-Agent: 연락처 포함 → 문제가 생기면 쉽게 연락 가능.
+- 도메인 제외 리스트 유지: 요청 시 빠르게 제외 → 관리자와의 신뢰 형성.
+- 대규모 도메인만 타겟팅: 소규모 사이트 피해 최소화.
+- 도메인당 최소 70초 딜레이: 서버 과부하 방지.
+
+이런 접근은 단순히 기술적인 효율성뿐 아니라, 인터넷 생태계 전체에 대한 존중을 보여주는 행동이에요. 실제로 많은 관리자들이 무례한 크롤러 때문에 고통받고 있고, 이런 배려는 커뮤니티에서도 높이 평가받습니다.
+
+**크롤링 시스템 디자인 아키텍쳐**
+
+![250902_Billion_WebPage_Crawling](img/250902_Billion_WebPage_Crawling.png)
+
+    The design I ended up with looked pretty different than the typical crawler solution for systems design interviews, which generally disaggregates the functions (parsing, fetching, datastore, crawl state) into totally separate machine pools.
+    What I went with instead was a cluster of a dozen highly-optimized independent nodes, each of which contained all the crawler functionality and handled a shard of domains
+
+- 일반적인 크롤러 디자인과 다른 접근법을 채택
+  * 그 이유로는, 제한된 비용 그리고 프로젝트의 목적은 전체 크롤링 과정보다는 각 머신 하나하나의 성능을 최대한 활용하는 것에 있었음.
+
+| 항목                 | 일반적인 크롤러 디자인 🏗️                                   | 사용자의 디자인 🧩                                          |
+| ------               | -----------------------------                               | ----------------------                                      |
+| **구조 방식**        | 기능별로 분리된 컴포넌트 (fetcher, parser, datastore 등) 🧱 | 모든 기능을 하나의 노드에 통합 💡                           |
+| **확장성**           | 각 기능을 독립적으로 확장 가능 🔌                           | 노드 단위로 수평 확장 (샤딩 기반) 🌐                        |
+| **복잡도**           | 시스템 간 통신 및 동기화 필요 🔄                            | 노드 내부에서 로컬 처리로 단순화 🧘                         |
+| **장애 허용성**      | 특정 기능 장애 시 전체 영향 가능 ⚠️                          | 노드 단위로 격리되어 장애 영향 최소화 🛡️                    |
+| **도메인 분배 방식** | 중앙 crawl state 관리 시스템에서 분배 📋                    | 각 노드가 도메인 샤드를 독립적으로 처리 🗂️                  |
+| **운영 효율성**      | 고도화된 오케스트레이션 필요 🎛️                             | 단순한 클러스터 관리로 운영 부담 감소 🧑🔧                  |
+| **유연성**           | 기능별 최적화 가능하지만 복잡함 🧬                          | 노드 단위 최적화로 간결하고 빠름 ⚡                         |
+| **예의 있는 크롤링** | 구현에 따라 다름 🤷                                         | 70초 딜레이, robots.txt 준수, 연락처 포함 등 철저한 매너 🫶 |
+
+    12 nodes
+    Each on an i7i.4xlarge machine with 16 vCPUs, 128GB RAM, 10Gbps network bandwidth, and 3750GB instance storage
+    Each centered around 1 redis process + 9 fetcher processes + 6 parser processes
+
+**크롤링 과정에서의 주요 교훈**
+
+- 파싱이 가장 큰 병목
+  * 평균 페이지 크기가 과거(2012년 51KB)보다 훨씬 커짐(평균 242KB, 중앙값 138KB)
+  * lxml 대신 selectolax(Lexbor 기반) 로 변경 시 파싱 속도 대폭 향상
+  * 페이지 최대 크기 250KB로 트렁케이션하여 효율 개선
+  * 결과적으로, 단일 parser에서 초당 160페이지 파싱 달성, 최종적으로 fetcher:parser 비율을 9:6으로 조정해 약 950페이지/초 처리
+
+- Fetching: 쉬워진 점과 어려워진 점
+  * 네트워크 대역폭은 오히려 병목이 아님(노드당 25Gbps 중 8Gbps 정도만 사용)
+  * DNS 병목도 인기 도메인만 대상으로 하여 문제되지 않음
+  * 반면, **SSL 핸드셰이크가 전체 CPU 사용의 25%로 최대 병목 중 하나**로 등장
+  * 대부분의 페이지가 HTTPS로 전환됨에 따라, CPU 비용이 증가함
