--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4265,3 +4265,65 @@ message User {
 FOMO(Fear of Missing Out) 
 
 > FOMO는 **'Fear Of Missing Out'**의 약자로, 놓치는 것에 대한 두려움을 의미합니다. 이는 사람들이 다른 사람들과의 경험이나 기회를 놓칠까 봐 느끼는 불안감을 나타내며, 주로 소셜 미디어의 발달로 인해 더욱 두드러지게 나타나고 있습니다.
+
+## 25.09.04
+
+[(3) NDC25-프로그래밍 난다 고래  'THRONE AND LIBERTY'의 움직이는 지형 - YouTube](https://www.youtube.com/watch?v=wD8FgpHgK6M)
+
+- Throne And Liberty 서버 모델
+
+    TL 서버 / 액터 모델
+
+    행위자는 자신의 상태만 직접 수정할 수 있으며,
+    서로에게 영향을 주기 위해서는 반드시 메세지를 통해서만 소통한다.
+    (락의 필요성을 제거함)
+
+    -> 모든 액터가 서로 다른 스레드에서 동작 가능하다.
+
+    TL 의 1,000 vs 1,000 인원이 참여하는 전장의 움직이는 발판인 '배틀 캐리어'의 경우
+
+    '골렘 플레이어' - '캐리어' - '탑승한 플레이어'
+    => 모두 서로 다른 스레드에서 동작 가능해야 한다.
+
+```c
+struct Object {
+    //lock free 변수들 : 다른 스레드에서 락 없이 읽기 가능
+    int64_t parent_uid; // 부모 위치와 연결한다.
+    Position position;
+    int32_t direction;
+};
+```
+
+^ lock free 를 보장하나 값이 엄밀한 동기화를 보장하지는 않는데, 괜찮다. 수용 가능한 오차임.
+
+여기서 탑승자들은 가만히 서 있는데 골렘이 움직이면 탑승자들은 언제 포지션을 갱신해야 할까?
+
+- 같은 좌표계에 소속된 경우라면 -> 로컬 좌표만 확인해도 충분하다.
+  * 부모가 이동할 때 로컬 좌표가 변하는 것은 아니므로, 패킷을 보낼 때 로컬 좌표 변경 시에만 보내는 것으로 절약 가능
+- 다른 좌표계에 각각 분리되어 있는 액터라면 -> 글로벌 좌표 확인이 필요하다.
+  * 이때 글로벌 좌표의 경우, 액터가 부모 액터의 위치를 확인하고 루트까지 쭉쭉 올라가면서 갱신 필요.
+  * 다른 스레드의 부모 액터 접근이 필요해서 필요할 때 가끔 계산
+  * 이렇게 해도 정확도가 높다고 한다. (보통 원거리 투사체 목적지로 쓰이고 있다)
+
+```c
+struct Object{
+    //lock free 변수들
+    int64_t parent_uid;
+    Position local_position;
+    int32_t local_direction;
+    Position cached_global_position;
+    int32_t cached_global_direction;
+};
+```
+
+^ 그래서 최종적으로 소개되는 자료구조는 이렇게
+
+![250904_NDC_ThroneAndLiberty](img/250904_NDC_ThroneAndLiberty.png)
+
+응용버전으로 좌표계 변환에 관련된 내용을 소개.
+
+* 이동, 탑승의 경우 클라 요청으로 시작되어 서버는 검증 위주의 간단한 동작만 하지만
+* 이동 스킬 / 밀쳐내기 스킬 등의 경우, 서버 사이드에서 이동 경로를 생성해야 한다. 이 경우 충돌 계산, 좌표계 변환 및 관리가 필요
+  => ex: 로컬 좌표계(배틀 캐리어) -> 글로벌 좌표계 (성벽) -> 로컬 좌표계 (배틀 캐리어)
+* 이때 사용한 전략은 => 날아가는 동안 캐리어가 이동할 수 있기 때문에 최종 목적지 기준 좌표계로 경로를 설정하는 것.
+
