--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4327,3 +4327,20 @@ struct Object{
   => ex: 로컬 좌표계(배틀 캐리어) -> 글로벌 좌표계 (성벽) -> 로컬 좌표계 (배틀 캐리어)
 * 이때 사용한 전략은 => 날아가는 동안 캐리어가 이동할 수 있기 때문에 최종 목적지 기준 좌표계로 경로를 설정하는 것.
 
+## 25.09.05
+
+[(875) What is Incredibuild - YouTube](https://www.youtube.com/watch?v=ajJU_SaEAhM)
+
+빌드 과정을 분산 처리, 네트워크 상의 다수의 머신에서 전체 과정을 병렬로 수행함으로써 빌드 시간을 단축시킨다.
+
+- 각종 서비스와 Game 솔루션 (Unreal, Unity) 까지 지원
+
+- [Incredibuild Accelerate Compilation, Tests & Dev Workloads](https://www.incredibuild.com/)
+
+    Incredibuild speeds up builds in CI and local dev by caching and distributed processing, optimizing compute resources and reducing infrastructure waste.
+
+- Caching and Distribution : Break down your build into micro tasks, cache whatever can be stored, and distribute the rest to maximize acceleration and improve overall productivity.
+- Real-Time Monitoring : Incredibuild’s real-time build monitor and dashboards provide deep insights, allowing you to pinpoint inefficiencies, optimize resource allocation, and minimize infrastructure costs before they escalate.
+- Cloud-Ready : Incredibuild runs on-prem, in the cloud, and in hybrid environments. It dynamically scales to available resources, including spot instances, optimizing cost and performance.
+- Seamless Integration : Incredibuild is designed for flexibility, and works with the tools and processes you already use while meeting enterprise requirements.
+- Enterprise-Level Support : Benefit from dedicated enterprise-level support including implementation assistance, training, and ongoing technical support.
