--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4373,3 +4373,22 @@ struct Object{
 | **Ninja**    | 매우 빠른 빌드 시스템. CMake와 함께 자주 사용됨.            |
 | **Bazel**    | Google에서 개발한 빌드 시스템. 대규모 프로젝트에 적합.      |
 | **Icecream** | Linux 기반 분산 빌드 도구. distcc와 유사하지만 더 자동화됨. |
+
+## 25.09.12
+
+[유심 해킹 없다더니…5561명 유출 정황 하루만에 말 바꾼 KT 팩플  중앙일보](https://www.joongang.co.kr/article/25366249)
+
+- [KT 무단 소액결제 피해 확인과 해킹 차단 ‘A to Z’](https://m.boannews.com/html/detail.html?idx=139204)
+
+    이번 KT 휴대폰 무단 소액결제에 이용된 해킹 방법은 아직 밝혀지지 않았다. 업계는 불법 기지국 공격이나 복제폰·유심 복제 해킹, 인증 과정의 보안 취약점·ARS 인증 우회 등을 해킹 방법으로 추측하고 있으나, 아직은 가설 단계에 불과하다.
+    KT 고객은 소액결제 서비스 이용 중단(이용동의 철회)이나 한도 변경을 통해 무단 소액결제를 예방할 수 있다. 
+
+- [왜 KT만 털렸나… ‘무단 소액결제’ 사건 의문점 3가지](https://www.chosun.com/economy/tech_it/2025/09/11/P6IGLCLDPFFARKYDTBAPSIHFYA/)
+
+2) 불법 소형 기지국이 원인?
+
+    KT는 지난 8일 KISA에 사이버침해 사고를 신고하면서 이번 사고 원인 중 하나로 불법 초소형 기지국이 통신망에 접속한 사실이 확인됐다고 했다. 보안 업계에서는 경기 광명, 서울 금천·영등포 구 등 인접 지역에서 피해가 발생한 것을 근거로 들어 범인이 차량에 기지국 역할을 하는 ‘펨토셀’을 싣고 다니며 네트워크를 가로채는 ‘워 드라이빙’ 수법을 활용했을 가능성을 제기한다. 
+
+    그러나 이 경우에도 의문이 남는다. 실제 소액결제를 진행하려면 단순히 트래픽을 가로채는 것 외에 이름, 생년월일 등 개인 정보를 입력하고 본인인증을 하는 절차를 거쳐야 하기 때문이다. 류제명 과기부 2차관도 전날 브리핑에서 “여러 키값이나 인증 절차들이 있는데 이게 어떻게 소액결제까지 가능했는 지 조사가 진행돼봐야 알 것 같다”고 했다.
+
+    이날 KT는 조사과정에서 불법 초소형 기지국의 신호를 수신한 고객을 파악했고, 일부 고객의 IMSI 값이 유출 됐다고 밝혔다. 불법 초소형 기지국의 신호 수신 이력이 있는 고객 중 IMSI 유출 가능성이 있는 것으로 확인 된 고객은 5561명이다.
