--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4392,3 +4392,30 @@ struct Object{
     그러나 이 경우에도 의문이 남는다. 실제 소액결제를 진행하려면 단순히 트래픽을 가로채는 것 외에 이름, 생년월일 등 개인 정보를 입력하고 본인인증을 하는 절차를 거쳐야 하기 때문이다. 류제명 과기부 2차관도 전날 브리핑에서 “여러 키값이나 인증 절차들이 있는데 이게 어떻게 소액결제까지 가능했는 지 조사가 진행돼봐야 알 것 같다”고 했다.
 
     이날 KT는 조사과정에서 불법 초소형 기지국의 신호를 수신한 고객을 파악했고, 일부 고객의 IMSI 값이 유출 됐다고 밝혔다. 불법 초소형 기지국의 신호 수신 이력이 있는 고객 중 IMSI 유출 가능성이 있는 것으로 확인 된 고객은 5561명이다.
+
+## 25.09.13
+
+[(4) 내가 고른 색이 구린 이유 (RGB 버그)](https://www.youtube.com/watch?v=GHe5EGvXFgM)
+
+![250913_colormap](img/250913_colormap.png)
+
+
+**Summarized By Gemini**
+
+전통적인 컬러 피커로 미적으로 만족스러운 색상을 선택하기 어려운 이유를 설명하고, 더 효과적이고 지각적으로 균일한 색상 공간을 소개
+
+| 주요 내용 🎯                   | 설명 📝                                                                                                                                                                           |
+| :---                           | :---                                                                                                                                                                              |
+| **RGB의 문제점**               | RGB (Red, Green, Blue)는 컴퓨터에게는 훌륭하지만 인간에게는 직관적이지 않음. RGB 값만 보고 색상을 예측하기 어려움. 🖥️🤔                                                           |
+| **HSL/HSB의 한계**             | HSL (Hue, Saturation, Lightness)과 HSB (Hue, Saturation, Brightness)는 단일 색상 선택에는 더 사용자 친화적. 하지만 여러 색상을 다루거나 일관된 밝기를 유지하려고 할 때 실패. 🎨🤯 |
+| **CIELAB과 LCH: 더 나은 방법** | 이 색상 공간들은 색상 간의 지각적 차이가 색상 공간 내의 거리와 비례하도록 설계됨. LCH (Lightness, Chroma, Hue)는 CIELAB의 더 인간 친화적인 버전. 💡👍                             |
+| **OKLCH/OKLAB: 우월한 선택**   | OKLAB은 CIELAB의 개선된 버전이며, OKLCH는 가독성이 더 좋은 버전. 색상 조합을 더 쉽게 선택하고 일관되고 자연스러운 색상 변형과 그라데이션을 만들 수 있음. 🏆✨                     |
+
+* **RGB 추측 게임:** RGB 색상을 나타내는 세 개의 숫자를 보여주며, 일반인이 결과 색상을 추측하기 어렵다는 점을 강조.
+* **HSL의 일관성 없는 밝기:** HSL에서 밝기 값을 고정한 채 색조를 변경하면, 결과 색상들이 서로 다른 밝기 수준으로 보이는 현상.
+* **HSL의 일관성 없는 채도:** HSL에서 채도를 조정하면, 같은 값으로 조정하더라도 다른 색상에서는 지각되는 채도 변화가 매우 다를 수 있음.
+* **"이상하게 어두운" 그라데이션:** 전통적인 방법으로 만든 그라데이션은 중간 부분이 어둡고 탁해 보이는 경향.
+* **LCH의 일관된 밝기:** LCH에서 색조 변경 실험을 반복하면, 일관된 지각적 밝기를 가진 색상들이 생성됨.
+* **OKLCH를 이용한 색상 팔레트:** OKLCH를 사용하면 밝기와 채도를 고정한 채 색조를 변경하여 조화로운 색상 팔레트를 쉽게 생성할 수 있음을 보여줌.
+* **OKLCH로 만든 아름다운 그라데이션:** OKLCH가 부드럽고 균일하며 미적으로 만족스러운 그라데이션을 만든다는 것을 시연.
+
