--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4419,3 +4419,40 @@ struct Object{
 * **OKLCH를 이용한 색상 팔레트:** OKLCH를 사용하면 밝기와 채도를 고정한 채 색조를 변경하여 조화로운 색상 팔레트를 쉽게 생성할 수 있음을 보여줌.
 * **OKLCH로 만든 아름다운 그라데이션:** OKLCH가 부드럽고 균일하며 미적으로 만족스러운 그라데이션을 만든다는 것을 시연.
 
+## 25.09.15
+
+[%CPU Utilization Is A Lie - Brendan Long](https://www.brendanlong.com/cpu-utilization-is-a-lie.html)
+
+- [%CPU 사용률은 거짓임  GeekNews](https://news.hada.io/topic?id=22889)
+
+**Summarized By Gemini**
+
+물리 코어와 논리 코어의 가장 큰 차이점은 **실제 하드웨어의 존재 유무**에 있습니다.
+
+**물리 코어(Physical Core)**는 CPU 내에 실제로 존재하는 독립적인 처리 장치입니다. 각 물리 코어는 자체적으로 명령어를 가져오고, 해석하고, 실행할 수 있는 모든 구성 요소를 갖추고 있어 하나의 작업을 완벽하게 처리할 수 있습니다. 예를 들어 '12코어 CPU'라고 하면 12개의 물리 코어가 있다는 의미입니다.
+
+반면에 **논리 코어(Logical Core)**는 하나의 물리 코어를 운영체제(OS)에서 두 개인 것처럼 보이게 만드는 기술을 통해 생성된 가상의 처리 단위입니다. 이를 **하이퍼스레딩(Hyper-Threading)** 또는 동시 멀티스레딩(SMT, Simultaneous Multi-Threading) 기술이라고 부릅니다.
+
+### 물리 코어와 논리 코어의 관계 및 차이점
+
+#### 하이퍼스레딩의 작동 원리
+
+하나의 물리 코어 안에는 다양한 연산 유닛(정수 연산, 부동소수점 연산 등)이 존재합니다. 특정 작업을 처리할 때 이 모든 유닛이 항상 100% 사용되지는 않습니다. 예를 들어, 정수 연산을 수행하는 동안에는 부동소수점 연산 유닛이 쉬고 있을 수 있습니다.
+
+하이퍼스레딩은 이렇게 **하나의 물리 코어 내에서 쉬고 있는 자원(유휴 자원)을 활용하여 또 다른 작업을 동시에 처리**하도록 만드는 기술입니다. 운영체제는 이 기술이 적용된 하나의 물리 코어를 두 개의 논리 코어로 인식하고, 각각에 작업을 할당합니다.
+
+#### 성능의 차이
+
+사용자가 제공한 내용에서 언급된 것처럼, 논리 코어의 성능은 물리 코어와 동일하지 않습니다.
+
+* **12개 이하의 워커 (물리 코어 수 이내):** 작업이 각각의 독립적인 물리 코어에 할당됩니다. 각 코어는 온전한 자신의 자원을 모두 사용하여 작업을 처리하므로 성능이 가장 좋습니다.
+
+* **12개를 초과하는 워커 (논리 코어 사용 시작):** 13번째 작업부터는 이미 다른 작업을 처리하고 있는 물리 코어의 "논리 코어" 부분에 할당됩니다. 이때 두 작업은 하나의 물리 코어 내의 자원(실행 엔진, 캐시 등)을 나누어 써야 합니다. 이로 인해 **자원 경합(Resource Contention)**이 발생하여 성능 저하로 이어집니다. 즉, 2개의 논리 코어가 처리하는 작업량은 2개의 물리 코어가 처리하는 작업량보다 훨씬 적습니다.
+
+> **요약하자면, 물리 코어는 실제 공장이고, 논리 코어는 한 공장 안에 있는 두 개의 작업 라인과 같습니다.** 두 개의 공장은 두 배의 생산량을 내지만, 한 공장 안의 두 작업 라인은 자원을 공유하기 때문에 생산량이 두 배가 되지 못하는 것과 같은 원리입니다.
+
+특히 사용자가 언급한 **SIMD(Single Instruction, Multiple Data) 연산** 같은 특정 유형의 작업은 물리 코어의 특정 연산 유닛을 집중적으로 사용합니다.
+
+이 경우, 남는 유휴 자원이 거의 없기 때문에 논리 코어는 성능 향상에 거의 기여하지 못하고, 오히려 자원 경합으로 인해 전체적인 처리 효율이 떨어질 수도 있습니다.
+
+이것이 바로 CPU 사용률 수치는 계속 올라가는데 실제 처리량(성능)은 그만큼 따라오지 못하는 핵심적인 이유입니다.
