--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4604,3 +4604,26 @@ AI의 진정한 기회는 **'자동화(automation)'를 넘어 '시뮬레이션(s
 
     이게 특정 언어의 문법에 대한 지식(예: Rust에서 &, *, [를 어디에 넣어야 하는가)보다 훠어얼씬 중요한 기술이다.
 
+
+## 25.09.26
+
+[개발자 1명이 실수하면 인터넷이 멸망한다고?](https://www.youtube.com/watch?v=-7OzstATOxg&t=14s)
+
+**Summarized By Gemini**
+
+* **핵심 메시지:** 한 명의 개발자 실수가 오픈 소스 패키지의 상호 연결성 때문에 인터넷 전반에 광범위한 혼란을 일으킬 수 있음. 🌐
+* **공급망 공격:** 널리 사용되는 npm 패키지에 악성 코드가 주입된 "공급망 공격" 사례를 다룸. 🔗
+* **피싱 취약성:** 인기 있는 패키지를 관리하던 개발자 "qix"가 npm 보안 알림으로 위장한 피싱 이메일에 속아 개인 정보가 유출됨. 🎣
+  * 2fa 인증 방식을 변경하라고 안내하는 가이드 메일이었는데, 이 메일의 링크가 피싱 사이트로 연결됨.
+* **악성 코드 기능:**
+    * **데이터 가로채기:** 주입된 코드는 서버와 통신하는 기본적인 브라우저 함수를 해커가 만든 것으로 덮어씌워 데이터를 가로챔. 🕵️‍♀️
+    * **코인 지갑 주소 바꿔치기:** 특히 암호화폐 거래를 목표로, 정품 지갑 주소를 해커의 지갑 주소로 바꿔치기하며, 종종 "레벤슈타인 거리(Levenshtein Algorithm)" 알고리즘을 사용하여 유사한 문자열을 사용. 💸
+    * **UI 조작:** 서버 사이드 렌더링된 페이지의 경우, 시각적으로 표시되는 내용을 변경하지 않고도 코드를 변조하여 다른 주소로 자금이 전송되도록 만듦. 🎭
+* **오픈 소스 상호 의존성:** 많은 중요한 인터넷 서비스가 작고, 겉보기에는 중요하지 않은 오픈 소스 패키지에 의존하고 있음. 이러한 패키지의 침해는 수천 개의 다른 프로젝트에 연쇄적인 영향을 미 미칠 수 있음. 🕸️
+  * **'소프트웨어 공급망 공격(Software Supply Chain Attack)'**의 일종으로, 그 안에 데이터 변조(Data Tampering) 기법이 포함된 형태입니다.
+
+
+* **작은 패키지의 힘:**
+
+    >  "왜냐하면 이걸 설치해서 사용하는 3,000개의 다른 패키지도 있어서 그렇습니다 그래서 이게 갑자기 없어지면 3,000개의 다른 패키지와 또 이걸 또 참조해서 개발하고 있는 수만권의 프로젝트가 오류나고 멈추게 되는 거예요
+    이런 식으로 인터넷 세상을 지탱하고 있는 작은 MPM 패키지들이 굉장히 많은데 그게 저번 주에 실수로 해킹 당한 거예요"
