--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4632,6 +4632,12 @@ AI의 진정한 기회는 **'자동화(automation)'를 넘어 '시뮬레이션(s
 
 [1분 만에 알아보는 Cloud Spanner](https://www.youtube.com/watch?v=5bjYk6Hhd10)
 
+- True Time 은 구간으로 표시되는 시간 범위이며, 2 Phase Commit <- 방식으로 코디네이터와 각 참여자 간의 2회의 핸드쉐이크 통신이 발생한다.
+- Escrow 서비스 처럼 구매자와 판매자 가의 제 3의 기관(은행)이 개입하는 시나리오와 비슷.
+- 분산 네트워크 환경에서는 온갖 일이 발생할 수 있어서 제미니에게 '만약 2PC 과정에서 1단계 실패는 롤백된다는 건 이해가 쉬운데 2단계 실패는 어떻게 대응할거냐?' 라고 질문하니
+  - '무한 재시도' 한다고 대답.
+  - 코디네이터 입장에서 2단계 액션이 결정된 이후 부터는 되돌릴 수 없는 것으로 간주하고, 장애가 생긴 참여자 노드는 복구될 때까지 계속 재시도하거나 그냥 버리거나 하는 듯하다.
+
 **Summarized By Gemini**
 
 TrueTime은 단일 숫자(예: `1664198400`)로 시간을 표현하지 않습니다. 대신 **구간(interval)**으로 시간을 표현하며, 이것이 핵심입니다.
@@ -4668,4 +4674,37 @@ struct TrueTime {
 이 '커밋 대기' 규칙 때문에, 타임스탬프 107을 가진 트랜잭션이 완료된 시점에는 실제 시간이 확실히 107을 지났다는 것을 전역적으로 보장할 수 있습니다.
 
 만약 다른 데이터 센터에서 이 트랜잭션 직후에 새 트랜잭션을 시작한다면, 그 트랜잭션의 시작 시간은 반드시 107보다 클 수밖에 없습니다. 이를 통해 모든 트랜잭션의 순서를 전 세계적으로 명확하게 결정할 수 있게 됩니다.
+
+커밋 대기(commit wait)는 트랜잭션을 최종 확정하기 직전의 마지막 단계일 뿐, 트랜잭션의 원자성(Atomicity, '전부 아니면 전무') 원칙은 이 단계에도 동일하게 적용됩니다.
+
+##### 🏦 비유: 부동산 거래 에스크로
+
+이 과정을 부동산 거래의 **에스크로(Escrow)** 서비스에 비유할 수 있습니다.
+
+1.  **준비 단계 (Prepare):** 구매자는 돈을, 판매자는 집문서를 에스크로 계좌(중립적인 제3자)에 맡깁니다. 양측 모두 거래를 이행할 준비가 되었음을 확인하는 단계입니다. 이 시점에서는 아직 거래가 완료되지 않았습니다.
+2.  **커밋 대기 (Commit Wait):** 에스크로는 계약서에 명시된 특정 시간(예: 다음 날 오전 9시)까지 기다립니다. 이 시간은 모든 법적 절차와 동기화를 보장하기 위한 약속입니다.
+3.  **커밋 단계 (Commit):** 약속된 시간이 되면, 에스크로는 구매자에게 집문서를, 판매자에게 돈을 최종적으로 전달합니다. 이 시점부터는 되돌릴 수 없습니다.
+
+만약 **'커밋 대기' 중**에, 즉 다음 날 오전 9시가 되기 전에 법적인 문제가 발견되거나 한쪽에서 심각한 오류가 발생하면 에스크로는 거래 전체를 무효로 하고 구매자에게 돈을, 판매자에게 집문서를 그대로 돌려줍니다.
+
+##### ⚙️ 기술적 설명: 2단계 커밋과 커밋 대기
+
+Spanner는 분산 트랜잭션을 안전하게 처리하기 위해 **2단계 커밋(Two-Phase Commit, 2PC)** 프로토콜을 사용합니다. 커밋 대기는 이 프로토콜의 일부입니다.
+
+**1단계: 준비 (Prepare Phase)**
+
+* 트랜잭션 **코디네이터(Coordinator)** 가 관련된 모든 서버(**참여자, Participants**)에게 "커밋할 준비가 되었는가?"라고 묻습니다.
+* 각 참여자는 변경될 데이터를 잠그고(lock), 변경 내용을 로그(log)에만 기록합니다. 아직 실제 데이터는 바꾸지 않습니다.
+* 모든 참여자가 준비되었다고 응답하면, 코디네이터는 커밋 타임스탬프(`t_commit`)를 결정합니다.
+* **바로 이 시점에 '커밋 대기'가 시작됩니다.** 코디네이터는 실제 시간이 `t_commit`을 지날 때까지 기다립니다. 아직 최종 '커밋' 명령은 보내지 않은 상태입니다.
+
+**2단계: 커밋 (Commit Phase)**
+
+* 커밋 대기가 성공적으로 끝나면, 코디네이터는 모든 참여자에게 "최종 커밋하라!"는 명령을 보냅니다.
+* 참여자들은 로그에 기록해 둔 변경 사항을 실제 데이터에 적용하고 잠금을 해제합니다.
+
+#### **만약 커밋 대기 중에 실패가 발생한다면?**
+
+* **참여자 서버 실패:** 코디네이터가 커밋 대기를 끝내고 "커밋하라!" 명령을 보냈는데, 한 참여자가 응답하지 않으면 코디네이터는 트랜잭션이 불확실한 상태에 빠졌다고 판단하고 **롤백**을 시도합니다.
+* **코디네이터 서버 실패:** 커밋 대기 중에 코디네이터 자신이 실패하면, 참여자들은 영원히 기다릴 수 없습니다. 타임아웃이 발생하면 참여자들은 코디네이터에게 트랜잭션 상태를 묻고, 응답이 없으면 안전을 위해 스스로 **롤백**합니다. 복구된 코디네이터도 상태가 불확실한 트랜잭션은 롤백 처리합니다.
 
