--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4738,3 +4738,23 @@ Spanner는 분산 트랜잭션을 안전하게 처리하기 위해 **2단계 커
     이 기능을 사용자 친화적으로 만들려면 어떻게 해야 할까요?
 
     두 가지 접근 방식 모두 가치가 있지만, 보안 취약점에 대한 고민을 자연스럽게 하게 만드는 것은 단 하나뿐입니다.
+
+## 25.10.14
+
+**세계 최초의 프로그래머**
+
+- [Ada Lovelace - Wikipedia](https://en.wikipedia.org/wiki/Ada_Lovelace)
+
+    Augusta Ada King, Countess of Lovelace (née Byron; 10 December 1815 – 27 November 1852), also known as Ada Lovelace, was an English mathematician and writer chiefly known for her work on Charles Babbage's proposed mechanical general-purpose computer, the Analytical Engine.
+    She was the first to recognise that the machine had applications beyond pure calculation.
+    Ada Lovelace is sometimes considered to be the first computer programmer.
+
+컴퓨터가 없던 시절에 베르누이 수(Bernoulli Number) 를 구하는 알고리즘을 개발했다.
+
+- [Note G - Wikipedia](https://en.wikipedia.org/wiki/Note_G)
+- 그러나 이 알고리즘은 어디까지나 설계도로서, 에이다 러브레이스의 생애에 테스트 되지 못했다고 한다.
+- 현대에 와서 프로그래밍 언어로 번역 후 테스트 한 사람이 있었는데, 설계도에 오탈자가 있어서 버그가 난다고 한다.
+
+
+
+
