--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4755,6 +4755,57 @@ Spanner는 분산 트랜잭션을 안전하게 처리하기 위해 **2단계 커
 - 그러나 이 알고리즘은 어디까지나 설계도로서, 에이다 러브레이스의 생애에 테스트 되지 못했다고 한다.
 - 현대에 와서 프로그래밍 언어로 번역 후 테스트 한 사람이 있었는데, 설계도에 오탈자가 있어서 버그가 난다고 한다.
 
+## 25.11.01
 
+### [(364) 어이없는 AWS 연쇄 폭발 사건](https://www.youtube.com/watch?v=ZDhEQcL5bYg)
+
+10월 19일 발생한 AWS 오류는 DNS 서비스의 race condition 이 원인
+
+- [AWS의 일시 장애, 디지털 사회를 멈춰 세우다…기술 인프라 집중 구조의 리스크 재조명 - MS TODAY](https://www.mstoday.co.kr/news/articleView.html?idxno=99157)
+
+    21일(현지시간) AWS에서 발생한 장애는 수 시간 내 복구됐지만, 그 여파는 광범위했다. 모바일 주문 시스템, 스마트홈 기기, 의료기관의 예약 시스템, 일부 모바일 뱅킹과 온라인 결제 서비스까지 연쇄적으로 영향을 받았다. 클라우드 시스템이 일상 인프라로 통합된 사회에서, 플랫폼 한 곳의 정지로 실생활 기능까지 일시 정지되는 현상이 벌어진 것이다.
+
+    AWS는 전 세계 클라우드 시장 점유율 약 37%를 차지하고 있으며, 마이크로소프트와 구글을 포함한 상위 3개 기업이 전체 시장의 60% 이상을 점유하고 있다. AWS의 고객사는 전 세계 약 4백만 개에 이르며, 의료, 금융, 교육, 유통 등 다양한 산업에서 이 서비스를 기반으로 시스템을 운영하고 있다.
+
+    문제는 이처럼 효율성과 확장성 측면에서 매력적인 클라우드 플랫폼이, 동시에 단일 실패 지점(Single Point of Failure)이라는 구조적 한계를 안고 있다는 점이다. 실제로 장애 발생 당시, 일부 병원은 예약 처리에 40분 이상이 소요됐고, 식당 결제 시스템이 멈춰 손님에게 무료 식사를 제공하는 일도 발생했다. 일상의 다양한 기능이 클라우드 인프라에 연결되어 있다는 점을 실감하게 한 사례다.
+
+    국내 한 클라우드 보안 솔루션 업체 관계자는 “장애 자체는 기술적으로 발생할 수 있는 일”이라면서도 “문제는 복수 시스템이나 대체 경로 없이 단일 플랫폼에 서비스가 집중돼 있다는 점”이라고 말했다. 이어 “국내외 많은 기업이 비용 효율성에 초점을 맞추고 있지만, 이제는 안정성과 분산 전략의 필요성도 함께 고려해야 할 시점”이라고 덧붙였다.
+
+- [A single DNS race condition brought AWS to its knees • The Register](https://www.theregister.com/2025/10/23/amazon_outage_postmortem/)
+
+    The incident began at 11:48 PM PDT on October 19 (7.48 UTC on October 20), when customers reported increased DynamoDB API error rates in the Northern Virginia US-EAST-1 Region. The root cause was a race condition in DynamoDB's automated DNS management system that left an empty DNS record for the service's regional endpoint.
+
+    The DNS management system comprises two independent components (for availability reasons): a DNS Planner that monitors load balancer health and creates DNS plans, and a DNS Enactor that applies changes via Amazon Route 53.
+
+    Amazon's postmortem says the error rate was triggered by "a latent defect" within the service's automated DNS management system.
+
+    The race condition occurred when one DNS Enactor experienced "unusually high delays" while the DNS Planner continued generating new plans. A second DNS Enactor began applying the newer plans and executed a clean-up process just as the first Enactor completed its delayed run. This clean-up deleted the older plan as stale, immediately removing all IP addresses for the regional endpoint and leaving the system in an inconsistent state that prevented further automated updates applied by any DNS Enactors.
+
+**Summarized By Gemini**
+
+**주요 내용:**
+
+* **발단: DynamoDB 장애**
+    * 어느 날 에픽게임즈, EA, 코인베이스 등 여러 인터넷 서비스가 동시에 마비되는 사태가 발생했습니다 [[00:00](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=0)].
+    * 원인은 AWS의 DB 서비스 중 하나인 'DynamoDB'가 망가졌기 때문입니다 [[00:16](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=16)], [[00:25](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=25)].
+
+* **직접적 원인: DNS 오류**
+    * DynamoDB 서비스 자체의 문제라기보다는, 도메인 주소를 실제 서버 IP로 변환해주는 DNS(Domain Name System) 서비스에서 문제가 발생했습니다 [[00:32](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=32)], [[00:51](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=51)].
+    * AWS 내부적으로 DNS 설정을 자동으로 관리하는 프로그램이 있었는데, 이 코드에 '레이스 컨디션'이라는 논리적 오류가 발생했습니다 [[01:08](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=68)], [[02:32](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=152)].
+    * 새로운 DNS 설정(예: 21번)이 적용되는 도중, 처리가 늦어지던 예전 DNS 설정(예: 20번)이 뒤늦게 적용되며 새 설정을 덮어썼습니다 [[02:01](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=121)], [[02:16](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=136)].
+    * 설상가상으로, 오래된 20번 설정이 활성화된 상태에서 "오래된 설정 삭제" 프로세스가 동작해, 결국 모든 DNS 설정이 비어버리는 사태가 발생했습니다 [[02:24](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=144)].
+
+* **연쇄 폭발: 장애의 확산**
+    * 엔지니어들이 3시간 만에 DynamoDB의 DNS 문제를 복구했지만 [[02:41](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=161)], 이는 시작에 불과했습니다.
+    * **EC2 (서버 임대):** 서버 컴퓨터를 빌려주는 EC2 서비스가 DynamoDB를 내부적으로 사용(대여 가능 컴퓨터 목록 저장)하고 있었기 때문에, DynamoDB가 멈추자 EC2의 신규 서버 임대가 불가능해졌습니다 [[02:50](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=170)], [[02:58](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=178)].
+    * **렌탈 서비스 과부하:** DynamoDB가 복구되자, 그동안 밀려있던 EC2 렌탈 요청이 한꺼번에 몰리면서 렌탈 담당 서비스가 다운되었습니다 [[03:06](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=186)], [[03:14](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=194)].
+    * **네트워크 장애:** 렌탈 서비스가 복구된 후에도, 임대된 컴퓨터들의 네트워크 설정 처리가 지연되어 인터넷이 안 되는 문제가 4시간 동안 지속되었습니다 [[03:24](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=204)], [[03:32](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=212)].
+    * **NLB (로드 밸런서):** EC2의 상태를 확인하며 트래픽을 분산하는 NLB 서비스가 불안정한 EC2 때문에 함께 불안정해지며 지연이 발생했습니다 [[03:40](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=220)], [[03:51](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=231)].
+    * **기타 서비스:** Lambda(서버리스), SQS(메시지 큐), ECS/EKS(컨테이너) 등 DynamoDB나 EC2에 의존하던 다른 수많은 서비스들(심지어 AWS 로그 및 고객센터까지)이 연쇄적으로 마비되었습니다 [[04:01](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=241)], [[04:17](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=257)], [[04:25](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=265)], [[04:34](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=274)].
+
+* **결론**
+    * 모든 장애는 약 15시간 만에 해결되었습니다 [[04:34](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=274)].
+    * 이 사건은 AWS가 내부적으로 단일 서비스(DynamoDB)와 단일 지역에 생각보다 크게 의존하고 있음을 보여주었습니다 [[04:52](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=292)].
+    * 또한 여러 구역(AZ)에 분산해도 소용없이 모든 AZ가 다운되어, 기존의 안정성 대책에 대한 의문을 남겼습니다 [[05:00](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=300)].
 
 
