--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4808,4 +4808,129 @@ Spanner는 분산 트랜잭션을 안전하게 처리하기 위해 **2단계 커
     * 이 사건은 AWS가 내부적으로 단일 서비스(DynamoDB)와 단일 지역에 생각보다 크게 의존하고 있음을 보여주었습니다 [[04:52](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=292)].
     * 또한 여러 구역(AZ)에 분산해도 소용없이 모든 AZ가 다운되어, 기존의 안정성 대책에 대한 의문을 남겼습니다 [[05:00](http://www.youtube.com/watch?v=ZDhEQcL5bYg&t=300)].
 
+## 25.11.07
+
+### [The Learning Loop and LLMs](https://martinfowler.com/articles/llm-learning-loop.html)
+
+
+![251107_LLM](img/251107_LLM.png)
+
+이 글은 **소프트웨어 개발의 본질이 '학습'에 있으며, LLM(거대 언어 모델)이 이 과정을 자동화할 수 없다**고 주장합니다.
+
+LLM은 생산성을 높이는 도구일 뿐, 개발자가 시스템을 깊이 이해하는 '학습 순환' 과정을 대체할 수는 없다는 것이 핵심입니다.
+
+* **소프트웨어 개발은 '조립 라인'이 아니다**
+    다른 공학과 달리, 소프트웨어는 설계와 구현이 분리될 수 없습니다. 코드를 작성하는 과정 자체가 설계를 발견하는 과정이며, 끊임없는 피드백과 학습을 요구합니다. 애자일(Agile) 방법론은 이미 20년 전에 이를 인지했습니다.
+
+* **LLM은 '속도의 환상'을 제공한다**
+    LLM은 초기 설정, 보일러플레이트 코드 생성 등에서 마찰을 줄여주지만(예: "Hello, World" 단계), 이는 '유지보수 절벽(Maintenance Cliff)'이라는 위험을 만듭니다. 로우코드(Low-code) 플랫폼처럼, 당장의 기능은 빠르게 얻지만 시스템의 작동 원리에 대한 '학습'이 생략됩니다. 이로 인해 작은 요구사항 변경에도 대응하기 어려운 '블랙박스'가 생겨 결국 생산성이 저하됩니다.
+
+* **AI는 '학습'을 자동화할 수 없다**
+    진정한 전문성은 **'관찰 -> 실험 -> 적용'**이라는 학습 순환을 통해 얻어집니다. AI가 완벽한 코드를 즉시 생성해 줄 수는 있지만, 개발자가 스스로 문제를 해결하며 겪는 '작은 실패'와 '아하!'하는 순간, 즉 '경험'을 줄 수는 없습니다.
+
+* **LLM의 진정한 가치: '자연어 번역기'**
+    LLM의 강력함은 Gradle, Linux 명령어, SVG, Python 등 개발에 필요한 **수많은 전문 언어와 도구들을 '자연어'로 연결**해주는 능력에 있습니다. 진입 장벽을 낮추고 탐색을 더 쉽게 만들지만, 이 '유창한 번역'이 각 도구의 설계와 한계를 깊이 이해하는 '학습'과 동일하지는 않습니다.
+
+
+
+소프트웨어 개발은 공장 조립 라인처럼 될 수 있다는 생각을 항상 거부해왔습니다. 우리의 도구가 더 똑똑해지고, 빨라지고, 유능해져도, 본질적인 행위는 동일하게 유지됩니다. **우리는 '직접 해보면서' 배운다는 것입니다.**
+
+소프트웨어 개발에 '조립 라인'은 형편없는 은유입니다
+
+대부분의 성숙한 공학 분야에서는 프로세스가 명확합니다. 소수의 전문가가 시스템을 설계하고, 덜 전문화된 작업자가 계획을 실행합니다. 이러한 설계와 구현의 분리는 안정적이고 예측 가능한 물리 법칙과 반복 가능한 건설 패턴에 의존합니다.
+
+소프트웨어는 그렇게 작동하지 않습니다. 물론 자동화할 수 있는 반복적인 부분도 있지만, 구현 전에 설계가 완료될 수 있다는 가정 자체가 작동하지 않습니다. 
+소프트웨어에서 **디자인은 구현을 통해 드러납니다.** 우리는 종종 올바른 설계를 이해하기 위해서라도 코드를 먼저 작성해야 합니다. 코드로부터의 피드백이 우리의 주된 길잡이입니다.
+
+이 작업의 상당 부분은 고립되어 이루어질 수 없습니다. 소프트웨어 제작은 개발자, 제품 소유자, 사용자 및 기타 이해관계자 간의 끊임없는 상호작용을 포함하며, 각자가 자신의 통찰력을 제공합니다.
+
+우리의 프로세스는 이러한 역동성을 반영해야 합니다. 코드를 작성하는 사람들은 단순한 '구현자'가 아니라, 올바른 설계를 발견하는 데 중심적인 역할을 합니다.
+
+
+* 나는 LLM을 브레인스토밍 파트너로 신중하게 사용하는 법을 배웠습니다
+
+저는 최근 제 책에서 설명하는 패턴에 기반하여 분산 시스템 구축을 위한 프레임워크를 개발했습니다. 저는 LLM으로 많은 실험을 했습니다. LLM은 브레인스토밍, 이름 짓기, 보일러플레이트(상용구) 코드 생성에 도움이 되었습니다.
+하지만 그만큼 자주, **미묘하게 틀리거나 더 깊은 의도와 어긋난** 코드를 생성했습니다. 저는 많은 부분을 버리고 처음부터 다시 시작해야 했습니다.
+
+결국 저는 LLM을 더 신중하게 사용하는 법을 배웠습니다. 즉, 자율적인 구축자가 아니라 **아이디어를 위한 브레인스토밍 파트너**로서 말입니다. 그 경험은 제가 소프트웨어 개발의 본질에 대해 생각하는 데 도움을 주었습니다.
+가장 중요하게는, 소프트웨어 작성은 근본적으로 '학습 행위'이며, 우리에게 LLM 에이전트가 생겼다고 해서 학습의 필요성에서 벗어날 수는 없다는 것입니다.
+
+* LLM은 실험의 문턱을 낮춥니다
+
+    의미 있는 작업을 시작하기 전에, 결정적으로 중요한 단계가 하나 있습니다. 바로 '시작하기 위해 준비하는 것'입니다.
+
+    환경 설정—의존성 설치, 올바른 컴파일러나 인터프리터 선택, 버전 불일치 해결, 런타임 라이브러리 연결—은 때때로 가장 좌절스럽고도 필수적인 첫 번째 허들입니다.
+
+    "Hello, World" 프로그램이 전설적인 데는 이유가 있습니다. 단지 전통이 아닙니다. 그것은 상상이 실행을 만나는 순간을 의미합니다. 그 첫 번째 성공적인 출력은 **상호작용의 고리를 닫습니다.** —도구가 준비되었고, 시스템이 응답하며, 이제 우리는 코드를 통해 생각할 수 있게 된 것입니다.
+
+    이 설정 단계가 바로 LLM이 가장 빛나는 부분입니다. LLM은 초기 빌드 파일 초안 작성, 올바른 플래그 찾기, 의존성 버전 제안, 프로젝트 부트스트래핑을 위한 작은 스니펫 생성 등 초기 마찰을 극복하는 데 엄청나게 유용합니다.
+
+    그들은 출발선의 마찰을 제거하고 실험의 문턱을 낮춰줍니다. 하지만 "hello world" 코드가 컴파일되고 실행되고 나면, 그때부터 진짜 작업이 시작됩니다.
+
+* 우리 작업의 근간이 되는 학습 순환(Learning Loop)이 있습니다
+
+    우리가 하는 모든 작업의 본질을 고려할 때, 지속적인 학습이 우리 작업의 원동력임은 분명합니다.
+
+    단순한 텍스트 편집기부터 가장 진보된 AI에 이르기까지, 우리가 어떤 도구를 사용하든, 깊고 지속적인 지식을 구축하는 길은 건너뛸 수 없는 근본적이고 실천적인 패턴을 따릅니다.
+
+    이 과정은 간단하지만 강력한 순환으로 나눌 수 있습니다.
+
+1.  **관찰하고 이해하기**
+    여기가 출발점입니다. 튜토리얼을 보거나, 문서를 읽거나, 기존 코드 조각을 연구하면서 새로운 정보를 받아들입니다. 무언가가 어떻게 작동해야 하는지에 대한 기본적인 정신적 지도를 구축하는 것입니다.
+2.  **실험하고 시도하기**
+    다음으로, 수동적인 관찰에서 능동적인 참여로 나아가야 합니다. 새로운 프로그래밍 기술에 대해 읽는 데 그치지 않고, **직접 코드를 작성합니다.** 코드를 변경하고, 망가뜨려보고, 무슨 일이 일어나는지 봅니다. 이것은 추상적인 아이디어가 마음속에서 실제적이고 구체적으로 느껴지기 시작하는 결정적인 "직접 해보는(hands-on)" 단계입니다.
+3.  **기억하고 적용하기**
+    이것이 가장 중요한 단계이며, 진정한 학습이 증명되는 곳입니다. 새로운 도전에 직면했을 때, 이전에 배운 것을 적극적으로 '기억해내고' 다른 맥락에서 '적용해야' 하는 순간입니다. "이런 문제를 전에 본 적이 있어, 여기서 그 해결책을 쓸 수 있겠다"라고 생각하는 지점입니다. 지식을 검색하고 사용하는 이 행위가 단편적인 정보를 내구성 있는 기술로 변화시킵니다.
+
+* AI는 학습을 자동화할 수 없습니다
+
+    이것이 바로 도구가 여러분을 대신해 학습을 해줄 수 없는 이유입니다. AI는 몇 초 만에 완벽한 솔루션을 생성할 수 있지만, **그것을 직접 만들어내는 고군분투의 과정에서 얻는 '경험'**을 줄 수는 없습니다.
+
+    작은 실패들과 "아하!"하는 순간들은 자동화로 제거해야 할 버그가 아니라, 학습의 본질적인 기능입니다.
+
+    모든 사람은 학습 순환을 탐색하는 고유한 방법을 가지고 있습니다
+
+    이 학습 순환은 각 개인에게 고유합니다. 무언가를 시도하고, 무엇이 작동하는지 보고, 피드백을 바탕으로 조정하는 지속적인 고리입니다. 어떤 방법은 당신에게 딱 맞을 것이고, 어떤 것은 그렇지 않을 것입니다.
+
+    진정한 전문성은 이러한 끊임없는 적응을 통해 자신에게 맞는 것을 찾아냄으로써 구축되며, 당신의 기술을 진정으로 당신의 것으로 만듭니다.
+
+* 학습의 필요성이 높은 수준의 코드 재사용을 어렵게 만듭니다
+
+    반대로, 전문적인 작업에서 지속적인 학습의 역할은 소프트웨어 개발에서 가장 고질적인 문제 중 하나인 '높은 수준의 코드 재사용의 제한적인 성공'을 설명해 줍니다.
+
+    맥락적 학습에 대한 근본적인 필요성이야말로, 오랫동안 추구해 온 높은 수준의 코드 "재사용"이라는 목표가 그토록 어려웠던(elusive) 이유입니다.
+
+    그 성공은 대부분 잘 정의되고 보편적인 문제를 해결하는 기술 라이브러리 및 프레임워크(데이터 구조나 웹 클라이언트 등)에 국한됩니다. 이 수준을 넘어서면 재사용은 실패합니다.
+
+    왜냐하면 대부분의 소프트웨어 문제는 **반드시 학습하고 내재화해야 하는 고유한 비즈니스 맥락**에 깊이 뿌리박고 있기 때문입니다.
+
+* 로우코드(Low-code) 플랫폼은 속도를 제공하지만, 학습 없이는 그 속도가 지속되지 않습니다
+
+    이는 우리를 "스타터 키트"와 "로우코드 플랫폼"이 제공하는 **'속도의 환상(Illusion of Speed)'**으로 이끕니다. 이들은 표준적인 사용 사례에 대해 강력한 초기 속도를 제공하지만, 이 속도에는 대가가 따릅니다.
+
+    우리가 사용하는 기성 컴포넌트들은 본질적으로 '압축된 맥락 묶음'입니다. 수많은 설계 결정, 트레이드오프, 교훈이 그 안에 숨겨져 있습니다.
+
+    그것들을 사용함으로써, 우리는 학습 없이 기능만을 얻게 되며, 우리가 방금 채택한 복잡한 기계 장치에 대한 내재화된 지식은 '0'인 상태로 남게 됩니다.
+
+    이는 곧 작업 완료에 드는 시간의 급격한 증가와 생산성의 급격한 감소로 이어질 수 있습니다.
+
+* 작은 변화처럼 보였던 것이 시간을 잡아먹는 블랙홀이 됩니다
+
+    저는 이것이 포화 상태에 이른 소프트웨어 시스템의 성능 그래프와 매우 유사하다고 봅니다. 우리는 '무릎 지점(knee)'을 보게 되는데, 이 지점을 넘어서면 지연 시간은 기하급수적으로 증가하고 처리량은 급격히 떨어집니다.
+
+    요구사항이 기성 솔루션이 제공하는 것에서 조금이라도 벗어나는 순간, 초기 속도 향상은 증발해버립니다. 컴포넌트가 어떻게 작동하는지에 대한 깊은 맥락이 부족한 개발자는 이제 블랙박스에 직면하게 됩니다.
+
+    **작은 변경처럼 보였던 것이 막다른 길이 되거나 시간을 잡아먹는 블랙홀**이 되어, 처음 며칠간 절약했다고 생각했던 모든 시간을 순식간에 집어삼켜 버릴 수 있습니다.
+
+* LLM은 전문성 개발을 저해하면서 이 일시적인 속도를 증폭시킵니다
+
+    거대 언어 모델은 이러한 역학을 몇 배로 증폭시킵니다. 우리는 지금 급진적인 생산성 향상—두 자릿수 속도 증가와 비용 감소—에 대한 주장들에 휩쓸리고 있습니다.
+
+    그러나 우리 작업의 근본적인 본질을 인정하지 않는다면, 이러한 지표들은 함정입니다.
+
+    진정한 전문성은 **깊은 맥락을 구축하기 위해 지식을 배우고 적용함으로써** 구축됩니다. 이러한 여정 없이 기성 솔루션을 제공하는 모든 도구는 숨겨진 위험을 안고 있습니다.
+
+    번개 같은 속도로 완벽해 보이는 코드를 제공함으로써, LLM은 '유지보수 절벽(Maintenance Cliff)'의 궁극적인 버전을 상징합니다.
+
+    즉, 장기적으로 견고하고 유지보수 가능한 시스템을 구축하는 데 필요한 필수적인 학습을 우회하는 유혹적인 지름길 말입니다.
 
