--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -5231,3 +5231,110 @@ NAT Gateway는 **Public Subnet**에 위치해야 하며, **Elastic IP(고정 공
 3.  **인바운드 절대 불가:**
       * NAT Gateway를 통해서는 외부에서 내부로 접속을 **절대** 시작할 수 없습니다. (SSH 접속 등 불가)
       * 외부에서 접속하려면 Bastion Host(Public Subnet에 있는 점프 서버)를 이용하거나 VPN, SSM 등을 써야 합니다.
+
+### [Cloudflare outage on November 18, 2025](https://blog.cloudflare.com/18-november-2025-outage/)
+
+- [ChatGPT를 폭파시킨 클라우드 플레어](https://www.youtube.com/shorts/srdf56tlOW8)
+
+클라우드 플레어의 사후보고서
+
+- 클라우드 플레어의 bot management 시스템이 문제의 원인(네트워크 요청을 보내는 소스가 봇인지 아닌지 검사하는 AI 모델 기반 검증 시스템)
+  - ai 모델이 input 으로 받는 "feature" 설정 파일은 매 5분마다 refresh 
+  - ClickHouse DB 개선 이후 이 feature 파일에 필요한 정보를 가져올 때, 중복된 옵션을 불러오게되었고 파일 사이즈가 2배가 됨
+    - DB 권한 변경이 후 개발팀이 작성한 쿼리가 접근할 수 있는 Database 가 늘어난 것.
+
+```sql
+SELECT
+  name,
+  type
+FROM system.columns
+WHERE
+  table = 'http_requests_features'
+order by name;
+```
+
+  - feature 파일을 처리하는 봇 모듈은 rust 로 작성된 코드였는데, 클라우드 플레어의 모든 모듈은 unbounded memory consumption 을 막고 있음. 메모리를 사전 할당하고 있기 때문에, 다뤄질 수 있는 feature의 옵션 한도가 200개
+  - 그렇지만 옵션 컬럼이 DB로 부터 중복 출력되면서 200개 한도를 초과한 것. rust 코드는 panic 을 일으킴
+
+**Summarized By Gemini**
+
+2025년 11월 18일 발생한 클라우드플레어(Cloudflare)의 네트워크 장애에 대한 사후 분석(Post-mortem) 보고서입니다. 장애의 원인, 영향, 복구 과정 및 향후 대책을 요약하여 정리해 드립니다.
+
+**1. 장애 개요**
+* **일시:** 2025년 11월 18일 11:20 ~ 17:06 UTC (약 6시간)
+* **증상:** 클라우드플레어를 사용하는 웹사이트 및 서비스 접속 시 **5xx 에러** 발생, 트래픽 처리 실패.
+* **원인:** 사이버 공격이 아닌, **데이터베이스 권한 변경 작업 중 발생한 내부 오류**입니다.
+    * 봇 관리(Bot Management) 시스템이 사용하는 '기능 파일(Feature file)' 생성 쿼리가 중복된 데이터를 반환했습니다.
+    * 이로 인해 파일 크기가 2배로 커졌고, 시스템의 메모리 사전 할당 한도(200개)를 초과하여 네트워크 전역의 프록시 서버가 다운되었습니다.
+
+**2. 상세 원인 분석**
+* **트리거:** ClickHouse 데이터베이스의 권한 관리 개선 작업 중, 사용자에게 명시적인 테이블 접근 권한을 부여했습니다.
+* **쿼리 오류:** 기존 봇 관리 시스템의 기능 파일 생성 쿼리는 데이터베이스 이름을 필터링하지 않았습니다(`WHERE table = ...` 만 사용). 권한 변경으로 인해 기본(default) 테이블뿐만 아니라 샤드 원본 테이블(r0)까지 조회되면서 **결과값이 중복되어 반환**되었습니다.
+* **시스템 패닉:** 중복된 데이터로 인해 기능 파일 내 항목 수가 급증했고, 프록시 서버의 코드(Rust)가 메모리 제한 초과로 인해 패닉(Panic) 상태에 빠지며 트래픽 처리가 중단되었습니다.
+
+**3. 영향 받은 서비스**
+* **핵심 서비스:** CDN, 보안 서비스 전반에서 5xx 에러 및 지연 발생.
+* **Workers KV:** 핵심 프록시 장애로 인해 오류 급증.
+* **Access & Dashboard:** 로그인 불가(Turnstile 장애 연동), 인증 실패, 설정 변경 불가.
+* **Email Security:** 일부 IP 평판 조회 실패로 스팸 탐지 정확도 일시 하락.
+
+**4. 대응 및 복구 타임라인**
+* **11:05:** 데이터베이스 권한 변경 배포.
+* **11:28:** 장애 시작 (고객 트래픽에서 에러 발생). 초기에는 DDoS 공격으로 오인.
+* **13:05:** Workers KV 및 Access 서비스를 우회(Bypass) 조치하여 영향 완화.
+* **14:24:** 문제의 원인인 봇 관리 설정 파일의 자동 생성/배포 중단.
+* **14:30:** 정상 설정 파일로 수동 교체 및 배포 완료 → **주요 서비스 복구**.
+* **17:06:** 모든 하위 서비스 재시작 및 최종 복구 완료.
+
+**5. 향후 대책**
+* 내부 생성 설정 파일에 대해서도 사용자 입력 데이터처럼 엄격한 검증 절차 도입.
+* 기능(Feature)별 글로벌 킬 스위치(Kill switch) 도입으로 문제 발생 시 즉각 차단 기능 강화.
+* 에러 리포트(코어 덤프 등)가 시스템 자원을 고갈시키지 않도록 제한.
+* 모든 핵심 프록시 모듈의 실패 모드(Failure mode) 재검토.
+
+클라우드플레어 측은 이번 장애가 2019년 이후 최대 규모였음을 인정하며, 고객과 인터넷 생태계에 끼친 영향에 대해 깊이 사과하고 재발 방지를 약속했습니다.
+
+---
+
+이번에는 2019년 클라우드 플레어 다운 사태
+
+- WAF 웹 방화벽 관리 서비스에서 regular expressions 의 백트랙킹 현상으로 cpu 사용량이 100% 도달 -> 27분가 서비스 중단 
+
+[Details of the Cloudflare outage on July 2, 2019](https://blog.cloudflare.com/details-of-the-cloudflare-outage-on-july-2-2019/)
+
+**Summarized By Gemini**
+
+#### 1. 사건 개요
+* **발생 일시:** 7월 2일 (UTC 기준)
+* **증상:** 전 세계 Cloudflare 네트워크의 모든 CPU 코어 사용량이 100%로 치솟음. 이로 인해 Cloudflare를 이용하는 웹사이트 방문자들에게 '502 에러'가 발생하며 약 27분간 서비스가 중단됨.
+* **원인:** WAF(웹 방화벽) 관리 규칙에 배포된 **단 하나의 잘못된 정규표현식(Regular Expression)**이 치명적인 **백트래킹(Backtracking)**을 일으켜 CPU를 고갈시킴.
+
+#### 2. 상세 원인 분석
+* **문제의 정규표현식:** XSS(교차 사이트 스크립팅) 공격을 막기 위해 배포된 규칙 중 하나였습니다.
+* **기술적 배경:** 당시 사용하던 정규표현식 엔진(Lua/PCRE)은 매칭에 실패할 경우 이전 단계로 돌아가 다시 시도하는 '백트래킹' 방식을 사용합니다. 문제의 코드는 특정 패턴(`.*.*=.*` 형태와 유사)에서 입력값이 길어질수록 연산량이 기하급수적으로 늘어나는 구조였습니다.
+* **보호 장치 부재:**
+    * 과거에는 정규표현식의 과도한 CPU 사용을 막는 보호 코드가 있었으나, 몇 주 전 WAF 리팩토링 과정에서 실수로 제거되었습니다.
+    * 테스트 과정(CI/CD)은 통과했으나, 테스트 슈트가 CPU 과부하 여부는 검사하지 않고 기능 작동 여부만 확인했습니다.
+
+#### 3. 사건 진행 및 대응 타임라인
+* **13:42:** 엔지니어가 자동화 프로세스를 통해 WAF 규칙 변경 사항 배포.
+* **13:45:** 경고 알람 시작 (트래픽 급감, 502 에러 급증, CPU 고갈).
+* **14:00:** 원인이 WAF임을 식별. 공격이 아님을 확인.
+* **장애 대응의 어려움:** Cloudflare 직원들도 자체 서비스를 이용(Dogfooding)하고 있었기 때문에, 서비스 다운으로 인해 내부 관리 도구(Jira, Build 시스템, Access 등)에 접속할 수 없어 대응이 지연됨.
+* **14:07:** 전 세계 WAF 기능을 강제 종료(Global Kill).
+* **14:09:** 트래픽 및 CPU 수치 정상화.
+* **14:52:** 문제 해결 및 검증 후 WAF 기능 재활성화.
+
+#### 4. 왜 이런 일이 발생했는가? (복합적 요인)
+1.  엔지니어가 백트래킹 위험이 높은 정규표현식을 작성함.
+2.  CPU 과부하 방지 보호 장치가 실수로 제거된 상태였음.
+3.  사용 중인 정규표현식 엔진이 복잡도에 대한 안전장치가 없었음.
+4.  테스트 과정에서 CPU 소모량을 감지하지 못함.
+5.  WAF 배포 절차(Quicksilver)가 전 세계에 즉시 반영되도록 설계되어 있어 피해가 순식간에 확산됨.
+
+#### 5. 재발 방지 대책
+* **즉각적인 조치:** 삭제되었던 CPU 과부하 보호 장치 복구, 모든 WAF 규칙(3,868개) 전수 검사 완료.
+* **기술적 변경:** 런타임 보장이 되는(선형 시간 알고리즘을 사용하는) `re2` 또는 `Rust regex engine`으로 교체 예정. 
+* **프로세스 개선:** WAF 규칙 배포 시에도 일반 소프트웨어 배포처럼 단계적 롤아웃(Staged Rollout) 도입.
+* **비상 대응:** 장애 발생 시 내부 관리 도구 및 상태 페이지(Status Page)에 접속할 수 있도록 우회 경로 확보.
+
